# test-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
src/: setup.py
src/simple_project_pretorh/: hello.py
